--- a/film-review-api/src/main/resources/application.yml
+++ b/film-review-api/src/main/resources/application.yml
@@ -10,6 +10,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        globally_quoted_identifiers: true
 
 logging:
   level:
