security-api generanting bearer token. film-api send request to security-api and getting bearer token

--- a/security-api/src/main/resources/application.yaml
+++ b/security-api/src/main/resources/application.yaml
@@ -23,5 +23,5 @@ logging:
         SQL: DEBUG
 
 jwt:
-  secret: secret
-  expiration: 60000
+  secret: c97916ae-69ce-4f76-b4fd-10f2a3d9a701
+  expiration: 600000
